Multi-Frame conversion Done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,16 @@
         android:theme="@style/Theme.MyDICOM"
         tools:targetApi="31">
         <activity
-            android:name=".DicomViewerActivity"
+            android:name=".CameraActivity"
             android:exported="false" />
         <activity
+            android:name=".DicomViewerActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
